docker/kubernetes/kustomize/embed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: embed
  labels:
    app.novu.co/name: embed
  name: embed
  namespace: ayshei-biz-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.novu.co/name: embed
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        app.novu.co/name: embed
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: novu-env
          image: ghcr.io/novuhq/novu/embed:0.24.0
          name: embed
          ports:
            - containerPort: 4701
