docker/kubernetes/kustomize/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: worker
  labels:
    app.novu.co/name: worker
  name: worker
  namespace: ayshei-biz-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.novu.co/name: worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        app.novu.co/name: worker
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: novu-env
          image: ghcr.io/novuhq/novu/worker:0.24.0
          name: worker
          ports:
            - containerPort: 3004
