docker/kubernetes/kustomize/ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: ws
  labels:
    app.novu.co/name: ws
  name: ws
  namespace: ayshei-biz-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.novu.co/name: ws
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        app.novu.co/name: ws
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: novu-env
          image: ghcr.io/novuhq/novu/ws:0.24.0
          name: ws
          ports:
            - containerPort: 3002
