docker/kubernetes/kustomize/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: api
  labels:
    app.novu.co/name: api
  name: api
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app.novu.co/name: api
