docker/kubernetes/kustomize/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    app.novu.co/name: mongodb
  name: mongodb
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: '27017'
      port: 27017
      targetPort: 27017
  selector:
    app.novu.co/name: mongodb
