docker/kubernetes/kustomize/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    app.novu.co/name: redis
    app: redis
  name: redis
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: '6379'
      port: 6379
      targetPort: 6379
  selector:
    app.novu.co/name: redis
