docker/kubernetes/kustomize/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: web
  labels:
    app.novu.co/name: web
  name: web
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    app.novu.co/name: web
