docker/kubernetes/kustomize/widget-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: widget
  labels:
    app.novu.co/name: widget
  name: widget
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: "4500"
      port: 4500
      targetPort: 4500
  selector:
    app.novu.co/name: widget
