docker/kubernetes/kustomize/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: worker
  labels:
    app.novu.co/name: worker
  name: worker
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: '3004'
      port: 3004
      targetPort: 3004
  selector:
    app.novu.co/name: worker
