docker/kubernetes/kustomize/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    app: ws
  labels:
    app.novu.co/name: ws
  name: ws
  namespace: ayshei-biz-dev
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    app.novu.co/name: ws
